# neuralfield

./: .travis.yml  CMakeLists.txt  Dockerfile  INSTALL  README.md  ctools.cpp  dnf.py  optimize.py  scenario.py  setup.py  test  tools.py
cpp/: CMakeLists.txt  README
cpp/doc/: Doxyfile.in  Doxyfile.in.bak
cpp/examples/: CMakeLists.txt  example-000.cpp  example-001-basics.cpp  example-002-optimize.cpp  example-002-test.cpp  example_bounds.cpp  optimization-scenario.hpp  test.cpp
cpp/src/: CMakeLists.txt  buffered_layers.cpp  buffered_layers.hpp  convolution_fftw.h  function_layers.cpp  function_layers.hpp  input_layers.hpp  layers.cpp  layers.hpp  link_layers.cpp  link_layers.hpp  main.cpp  network.cpp  network.hpp  neuralfield.hpp  tools.hpp  types.hpp
examples/: CMakeLists.txt  example-000.cpp  example-001-basics.cpp  example-002-optimize.cpp  example-002-test.cpp  example-002b-optimize.cpp  example-003-optimize-tracking.cpp  example_bounds.cpp  optimization-scenario.hpp  test-distances.cpp
src/: buffered_layers.cpp  buffered_layers.hpp  convolution_fftw.cpp  convolution_fftw.h  function_layers.cpp  input_layers.cpp  input_layers.hpp  integrator.hpp  layers.cpp  layers.hpp  link_layers.cpp  link_layers.hpp  network.cpp  network.hpp  neuralfield.hpp  tools.hpp
tests/: CMakeLists.txt  test_link_layer.cpp  tests.hpp
yaml/: nf-001.json  nf-001.yml
